--- a/package.json
+++ b/package.json
@@ -13,5 +13,6 @@
     "jquery"   :  "1.8.0",
     "hammerjs" :  "0.6.0"
   },
-  "main": "jquery.dragend.js"
+  "main": "jquery.dragend.js",
+  "license": "MIT"
 }
